docs: adding cheat sheet on documentation (#3422)
* docs: adding cheat sheet on documentation

* chore: adding changelog file 3422.documentation.md

* fix: trying to fix local errors

* fix: adding `_static` folder

* fix: add  gitignore

* docs: adding new section to cheat sheet

* maint: trying to update ansys-sphinx-theme

* maint: install poppler within cicd

* test: install the dependency

* feat: adding new cells in ``cheat_sheet`` - still WIP

* fix: pool not supported in docs-build

* fix: ``cheat_sheet``

* fix: ``cheat_sheet``

* fix: ``add_mesh``

* fix: trying to create a 1-page cheat sheet

* docs: update ``cheat_sheet``

* fix: ``v24.2`` needs to be used as MAPDL version

* docs: ``cheat_sheet``

* Apply suggestions from code review

Co-authored-by: German <28149841+germa89@users.noreply.github.com>

* review: applying changes requested by @germa89

* fix: ``prnsol``

* fix: using ``mapdl.clear()`` for performances

* docs: removing ``eval`` for all plottings

* Apply suggestions from code review

* docs: removing previous PyMAPDL cheat sheet

* docs: fixing link

* fix: add jinja initial setup

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix: applying latest changes

* Apply suggestions from code review

Co-authored-by: Maxime Rey <87315832+MaxJPRey@users.noreply.github.com>

* fix: attempt to fix the jinja error

* fix: intersphinx link

* fix: extensions

* fix: cheat_sheet header

* ci: auto fixes from pre-commit.com hooks.

for more information, see https://pre-commit.ci

* fix: pre-commit

* docs: fix typo in doc

* review: applying @germa89's suggestions

---------

Co-authored-by: pyansys-ci-bot <92810346+pyansys-ci-bot@users.noreply.github.com>
Co-authored-by: Revathyvenugopal162 <revathy.venugopal@ansys.com>
Co-authored-by: Revathy Venugopal <104772255+Revathyvenugopal162@users.noreply.github.c

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,9 @@ env:
   # You should go up in number, if you go down (or repeat a previous value)
   # you might end up reusing a previous cache if it haven't been deleted already.
   # It applies 7 days retention policy by default.
-  RESET_EXAMPLES_CACHE: 2
-  RESET_DOC_BUILD_CACHE: 2
-  RESET_AUTOSUMMARY_CACHE: 2
+  RESET_EXAMPLES_CACHE: 0
+  RESET_DOC_BUILD_CACHE: 0
+  RESET_AUTOSUMMARY_CACHE: 0
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -263,11 +263,28 @@ jobs:
 
       - name: "Install docs build requirements"
         run: |
+          pip uninstall ansys-sphinx-theme
           pip install .[doc]
 
       - name: "Waiting for the services to be up"
         run: |
           .ci/waiting_services.sh
+      
+      - name: Install Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          tinytex: true
+
+      - name: Check Quarto Version
+        shell: bash
+        run: |
+          quarto --version
+      
+      - name: "Install Poppler for PDF to PNG conversion"
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y poppler-utils
 
       - name: "Build documentation"
         run: |
