--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,7 +119,7 @@ pymapdl_convert_script = "ansys.mapdl.core.cli:old_pymapdl_convert_script_entry_
 pymapdl = "ansys.mapdl.core.cli:main"
 
 [tool.pytest.ini_options]
-addopts = "-ra -vvv"
+addopts = "-ra -vvv --maxfail=3"
 junit_family = "legacy"
 filterwarnings = [
     "ignore::FutureWarning",
