--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,17 @@ ci:
 
 repos:
 
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v1.11.2
+  hooks:
+    - id: mypy
+      args: [
+        --disallow-untyped-defs,
+        --disallow-incomplete-defs,
+        --disallow-untyped-calls,
+        --ignore-missing-imports
+        ]
+
 - repo: https://github.com/ansys/pre-commit-hooks
   rev: v0.4.3
   hooks:
