--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ tests = [
     "matplotlib==3.9.2",
     "pandas==2.2.3",
     "pyansys-tools-report==0.8.0",
+    "pyfakefs==5.7.1",
     "pyiges[full]==0.3.1",
     "pytest-cov==5.0.0",
     "pytest-memprof<0.3.0",
@@ -119,7 +120,7 @@ pymapdl_convert_script = "ansys.mapdl.core.cli:old_pymapdl_convert_script_entry_
 pymapdl = "ansys.mapdl.core.cli:main"
 
 [tool.pytest.ini_options]
-addopts = "-ra -vvv --maxfail=3"
+addopts = "-ra -vvv --maxfail=10"
 junit_family = "legacy"
 filterwarnings = [
     "ignore::FutureWarning",
