--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,7 +120,7 @@ pymapdl_convert_script = "ansys.mapdl.core.cli:old_pymapdl_convert_script_entry_
 pymapdl = "ansys.mapdl.core.cli:main"
 
 [tool.pytest.ini_options]
-addopts = "-ra -vvv --maxfail=10"
+addopts = "-ra -vvv --maxfail=10 --cov=ansys.mapdl.core --cov-report=html"
 junit_family = "legacy"
 filterwarnings = [
     "ignore::FutureWarning",
@@ -148,8 +148,6 @@ src_paths = ["doc", "src", "tests"]
 [tool.coverage.run]
 source = ["ansys/pymapdl"]
 omit = [
-    # omit commands
-    "ansys/mapdl/core/_commands/*",
     # ignore legacy interfaces
     "ansys/mapdl/core/mapdl_console.py",
     "ansys/mapdl/core/jupyter.py",
