tests: not requiring warning if on minimal since ATP is not present.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -774,6 +774,8 @@ jobs:
     env:
       ON_LOCAL: true
       ON_UBUNTU: true
+      TESTING_MINIMAL: true
+      
 
     steps:
       - name: "Install Git and checkout project"
