--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ dependencies = [
     "ansys-mapdl-reader>=0.51.7",
     "ansys-math-core>=0.1.2",
     "ansys-platform-instancemanagement~=1.0",
-    "ansys-tools-visualization-interface>=0.2.6",
     "ansys-tools-path>=0.3.1",
+    "ansys-tools-visualization-interface>=0.2.6",
     "click>=8.1.3", # for CLI interface
     "grpcio>=1.30.0",  # tested up to grpcio==1.35
     "importlib-metadata>=4.0",
@@ -68,6 +68,7 @@ tests = [
     "pytest-cov==5.0.0",
     "pytest-memprof<0.3.0",
     "pytest-pyvista==0.1.9",
+    "pytest-random-order==1.1.1",
     "pytest-rerunfailures==14.0",
     "pytest==8.3.3",
     "scipy==1.14.1",
@@ -76,13 +77,13 @@ tests = [
 doc = [
     "ansys-dpf-core==0.10.1",
     "ansys-mapdl-reader==0.54.1",
-    "ansys-tools-visualization-interface==0.4.7",
     "ansys-sphinx-theme==1.1.7",
+    "ansys-tools-visualization-interface==0.4.7",
     "grpcio==1.67.0",
     "imageio-ffmpeg==0.5.1",
     "imageio==2.36.0",
-    "jupyter==1.1.1",
     "jupyter_sphinx==0.5.3",
+    "jupyter==1.1.1",
     "jupyterlab>=3.2.8",
     "matplotlib==3.9.2",
     "nbformat==5.10.4",
