--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,6 +147,7 @@ jobs:
           token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
           python-package-name: ${{ env.PACKAGE_NAME }}
           dev-mode: ${{ github.ref != 'refs/heads/main' }}
+          upload-reports: True
 
   docs-build:
     name: "Build documentation"
@@ -774,6 +775,7 @@ jobs:
     env:
       ON_LOCAL: true
       ON_UBUNTU: true
+      TESTING_MINIMAL: true
 
     steps:
       - name: "Install Git and checkout project"
