--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -820,7 +820,7 @@ jobs:
 
       - name: "Unit testing requirements installation"
         run: |
-          python -m pip install pytest pytest-rerunfailures pytest-cov
+          python -m pip install pytest pytest-rerunfailures pytest-cov pytest-random-order
 
       - name: "Unit testing"
         env:
