chore: registering markers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,7 +132,8 @@ filterwarnings = [
 ]
 markers = [
     "skip_grpc: skip tests using grpc",
-    "gui: skip tests that launch the GUI interface",
+    "requires_gui: skip tests that launch the GUI interface",
+    "console: run console test based",
 ]
 testpaths = "tests"
 image_cache_dir = "tests/.image_cache"
