--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,7 +120,7 @@ pymapdl_convert_script = "ansys.mapdl.core.cli:old_pymapdl_convert_script_entry_
 pymapdl = "ansys.mapdl.core.cli:main"
 
 [tool.pytest.ini_options]
-addopts = "-rxXsa -vvv --maxfail=10 --random-order-bucket=class"
+addopts = "-rxXsa -vvv --maxfail=10 --random-order-bucket=class --random-order --durations=10"
 junit_family = "legacy"
 filterwarnings = [
     "ignore::FutureWarning",
