--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,7 @@ dependencies = [
     "click>=8.1.3", # for CLI interface
     "grpcio>=1.30.0",  # tested up to grpcio==1.35
     "matplotlib>=3.0.0",  # for colormaps for pyvista
-    "numpy>=1.14.0,<1.25.0; python_version < '3.9'",
-    "numpy>=1.14.0,<3.0.0; python_version >= '3.9'",
+    "numpy>=1.14.0,<3.0.0",
     "pexpect>=4.8.0 ; platform_system=='Linux'",
     "platformdirs>=3.6.0",
     "protobuf>=3.12.2",  # minimum required based on latest ansys-grpc-mapdl
@@ -43,7 +42,6 @@ classifiers = [
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX",
     "Operating System :: MacOS",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
