--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ env:
   MAPDL_PACKAGE: ghcr.io/ansys/mapdl
   ON_CI: True
   PYTEST_ARGUMENTS: '-vvv -rxXsa --color=yes --durations=10 --random-order --random-order-bucket=class --maxfail=10 --reruns 3 --reruns-delay 4 --cov=ansys.mapdl.core --cov-report=html'
-
+  ANSYS_DPF_ACCEPT_LA: "Y"
   BUILD_CHEATSHEET: True
 
   # Following env vars when changed will "reset" the mentioned cache,
