--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ env:
   DPF_PORT: 21004
   MAPDL_PACKAGE: ghcr.io/ansys/mapdl
   ON_CI: True
-  PYTEST_ARGUMENTS: '-vvv -rxXsa --color=yes --durations=10 --random-order --random-order-bucket=class --maxfail=10 --reruns 3 --reruns-delay 4 --cov=ansys.mapdl.core --cov-report=html'
+  PYTEST_ARGUMENTS: '-vvv -rxXsa --color=yes --durations=10 --random-order --random-order-bucket=class --maxfail=10 --reruns 3 --reruns-delay 4 --cov=ansys.mapdl.core --cov-report=html --timeout=40'
 
   BUILD_CHEATSHEET: True
 
@@ -61,7 +61,6 @@ permissions:
   issues: write
 
 jobs:
-
 
   update-changelog:
     name: "Update CHANGELOG (on release)"
@@ -821,7 +820,12 @@ jobs:
 
       - name: "Unit testing requirements installation"
         run: |
-          python -m pip install pytest pytest-rerunfailures pytest-cov pytest-random-order
+          python -m pip install \
+            pytest==8.3.3 \
+            pytest-cov==6.0.0 \
+            pytest-random-order==1.1.1 \
+            pytest-rerunfailures==15.0 \
+            pytest-timeout==2.3.1
 
       - name: "Unit testing"
         env:
