docs: update docker instructions

--- a/docker/.dockerignore
+++ b/docker/.dockerignore
@@ -7,6 +7,7 @@
 **/aisol/AUTODYN
 **/aisol/bin
 **/aisol/BladeModeler
+**/aisol/CADIntegration
 **/aisol/CommonFiles
 **/aisol/DesignSpace
 **/aisol/dll
@@ -20,18 +21,18 @@
 **/aisol/lib/linx64/libaddress_sorting.so
 **/aisol/lib/linx64/libans.autodyn.adbatch.so
 **/aisol/lib/linx64/libans.autodyn.results_api.so
-**/aisol/lib/linx64/libans.cadint.assemblycontainer231.so
-**/aisol/lib/linx64/libans.cadint.assemblycontainerdrawing231.so
-**/aisol/lib/linx64/libans.cadint.assemblycontainerdrawingold231.so
-**/aisol/lib/linx64/libans.cadint.assemblycontainerserializer231.so
-**/aisol/lib/linx64/libans.cadint.assemblycontainertesselation231.so
-**/aisol/lib/linx64/libans.cadint.assemblycontainervirtualhelper231.so
+**/aisol/lib/linx64/libans.cadint.assemblycontainer242.so
+**/aisol/lib/linx64/libans.cadint.assemblycontainerdrawing242.so
+**/aisol/lib/linx64/libans.cadint.assemblycontainerdrawingold242.so
+**/aisol/lib/linx64/libans.cadint.assemblycontainerserializer242.so
+**/aisol/lib/linx64/libans.cadint.assemblycontainertesselation242.so
+**/aisol/lib/linx64/libans.cadint.assemblycontainervirtualhelper242.so
 **/aisol/lib/linx64/libans.cadint.autovt.so
-**/aisol/lib/linx64/libans.cadint.brepcomponent231.so
-**/aisol/lib/linx64/libans.cadint.brepcomponentmeshinghelper231.so
-**/aisol/lib/linx64/libans.cadint.brepcomponenttesselation231.so
-**/aisol/lib/linx64/libans.cadint.brepgeometry231.so
-**/aisol/lib/linx64/libans.cadint.brepserializer231.so
+**/aisol/lib/linx64/libans.cadint.brepcomponent242.so
+**/aisol/lib/linx64/libans.cadint.brepcomponentmeshinghelper242.so
+**/aisol/lib/linx64/libans.cadint.brepcomponenttesselation242.so
+**/aisol/lib/linx64/libans.cadint.brepgeometry242.so
+**/aisol/lib/linx64/libans.cadint.brepserializer242.so
 **/aisol/lib/linx64/libans.cadint.virtualtopo.so
 **/aisol/lib/linx64/libans.modelmanager.core.so
 **/aisol/lib/linx64/libans.modelmanager.engine.pm.so
@@ -80,21 +81,7 @@
 **/aisol/lib/linx64/libgpr.so
 **/aisol/lib/linx64/libgrpc.so
 **/aisol/lib/linx64/libgrpcpp_channelz.so
-**/aisol/lib/linx64/libhdf5-gcc820-1_10_5.so
-**/aisol/lib/linx64/libhdf5-gcc820-1_10_5.so.103
-**/aisol/lib/linx64/libhdf5-gcc820-1_10_5.so.103.1.0
-**/aisol/lib/linx64/libhdf5_cpp-gcc820-1_10_5.so
-**/aisol/lib/linx64/libhdf5_cpp-gcc820-1_10_5.so.103
-**/aisol/lib/linx64/libhdf5_cpp-gcc820-1_10_5.so.103.1.0
-**/aisol/lib/linx64/libhdf5_hl-gcc820-1_10_5.so
-**/aisol/lib/linx64/libhdf5_hl-gcc820-1_10_5.so.100
-**/aisol/lib/linx64/libhdf5_hl-gcc820-1_10_5.so.100.1.2
-**/aisol/lib/linx64/libhdf5_hl_cpp-gcc820-1_10_5.so
-**/aisol/lib/linx64/libhdf5_hl_cpp-gcc820-1_10_5.so.100
-**/aisol/lib/linx64/libhdf5_hl_cpp-gcc820-1_10_5.so.100.1.3
-**/aisol/lib/linx64/libhdf5_tools-gcc820-1_10_5.so
-**/aisol/lib/linx64/libhdf5_tools-gcc820-1_10_5.so.100
-**/aisol/lib/linx64/libhdf5_tools-gcc820-1_10_5.so.100.1.2
+**/aisol/lib/linx64/libhdf5*
 **/aisol/lib/linx64/libifcore.so.5
 **/aisol/lib/linx64/libifport.so.5
 **/aisol/lib/linx64/libimf.so
@@ -151,32 +138,32 @@
 **/aisol/StartPage
 **/aisol/WBAddins
 **/aisol/WBMWRegistry
-**/ans_uninstall231
+**/ans_uninstall242
 **/ansys/bin/.change_ansysdir2022r2
-**/ansys/bin/.change_ansysdir231
+**/ansys/bin/.change_ansysdir242
 **/ansys/bin/about.admin
 **/ansys/bin/ans_admin
-**/ansys/bin/ans_admin231
+**/ansys/bin/ans_admin242
 **/ansys/bin/ansconnect
-**/ansys/bin/ansconnect231
+**/ansys/bin/ansconnect242
 **/ansys/bin/anshelp
-**/ansys/bin/anshelp231
+**/ansys/bin/anshelp242
 **/ansys/bin/ansslurm
-**/ansys/bin/ansslurm231
+**/ansys/bin/ansslurm242
 **/ansys/bin/anstclsh
-**/ansys/bin/anstclsh231
+**/ansys/bin/anstclsh242
 **/ansys/bin/ansuge
-**/ansys/bin/ansuge231
+**/ansys/bin/ansuge242
 **/ansys/bin/answish
-**/ansys/bin/answish231
+**/ansys/bin/answish242
 **/ansys/bin/ansysts
-**/ansys/bin/ansysts231
+**/ansys/bin/ansysts242
 **/ansys/bin/bintst
-**/ansys/bin/bintst231
+**/ansys/bin/bintst242
 **/ansys/bin/launcher
-**/ansys/bin/launcher231
+**/ansys/bin/launcher242
 **/ansys/bin/launchertcl
-**/ansys/bin/launchertcl231
+**/ansys/bin/launchertcl242
 **/ansys/bin/linx64/.ansys_installed
 **/ansys/bin/linx64/lsdyna_dp.e
 **/ansys/bin/linx64/lsdyna_dp_mpp.e
@@ -185,33 +172,31 @@
 **/ansys/bin/linx64/lsl2a.e
 **/ansys/bin/linx64/lsl2a_dp.e
 **/ansys/bin/lsdyna
-**/ansys/bin/lsdyna231
+**/ansys/bin/lsdyna242
 **/ansys/bin/lsl2a
-**/ansys/bin/lsl2a231
+**/ansys/bin/lsl2a242
 **/ansys/bin/lsrun
-**/ansys/bin/lsrun231
+**/ansys/bin/lsrun242
 **/ansys/bin/nlhist
-**/ansys/bin/nlhist231
+**/ansys/bin/nlhist242
 **/ansys/bin/rdresu
-**/ansys/bin/rdresu231
+**/ansys/bin/rdresu242
 **/ansys/bin/rdsubs
-**/ansys/bin/rdsubs231
+**/ansys/bin/rdsubs242
 **/ansys/bin/ResRdDemo
-**/ansys/bin/ResRdDemo231
+**/ansys/bin/ResRdDemo242
 **/ansys/bin/ResWrDemo
-**/ansys/bin/ResWrDemo231
+**/ansys/bin/ResWrDemo242
 **/ansys/bin/userprog
-**/ansys/bin/userprog231
+**/ansys/bin/userprog242
 **/ansys/bin/wrtres
-**/ansys/bin/wrtres231
+**/ansys/bin/wrtres242
 **/ansys/bin/wrtsub
-**/ansys/bin/wrtsub231
+**/ansys/bin/wrtsub242
 **/ansys/bin/xansadmin.tcl
 **/ansys/data
 **/ansys/docu/ansadmin.hlp
-**/ansys/docu/LS-DYNA_Manual_Volume_I_R12.pdf
-**/ansys/docu/LS-DYNA_Manual_Volume_II_R12_Ver2.pdf
-**/ansys/docu/LS-DYNA_Manual_Volume_III_R12_Ver2.pdf
+**/ansys/docu/LS-DYNA_Manual*
 **/ansys/gui/en-us/images
 **/ansys/gui/en-us/matlib
 **/ansys/gui/en-us/resources
@@ -225,9 +210,12 @@
 **/ansys/syslib/boost/libboost_thread.so.1
 **/ansys/syslib/boost/libboost_thread.so.1.71.0
 **/ansys/syslib/CPython
+**/ansys/syslib/daal/*.a
+**/ansys/syslib/daal/libonedal_dpc.so*
+**/ansys/syslib/daal/libJavaAPI.so*
 **/ansys/syslib/PyQt
-**/ansys/syslib/ubuntu
 **/builddate.txt
+**/CADConfigLogs
 **/commonfiles/AAS/bin/linx64/AasAgentDotNetCore.dll
 **/commonfiles/AAS/bin/linx64/AnsysSessionManager.idl
 **/commonfiles/AAS/bin/linx64/APECSwizard.scm
@@ -271,17 +259,29 @@
 **/commonfiles/AAS/bin/linx64/scale001.jpg
 **/commonfiles/AAS/bin/linx64/SimulationAasDotNetStandard.dll
 **/commonfiles/AAS/bin/linx64/steer.scm
+**/commonfiles/AMD/BLIS/v3.2.1
+**/commonfiles/AMD/BLIS/v4.1.0
+**/commonfiles/AMD/BLIS/v4.1.1
 **/commonfiles/branch.txt
+**/commonfiles/CAD/Hoops
+**/commonfiles/CAD/Parasolid
+**/commonfiles/CAD/Siemens
+**/commonfiles/CAD/Spatial
+**/commonfiles/CAD/examples
 **/commonfiles/CFX
 **/commonfiles/configs
+**/commonfiles/CPython
 **/commonfiles/DebugControl
 **/commonfiles/examples
 **/commonfiles/fluids
 **/commonfiles/Fonts
+**/commonfiles/globalsettings
 **/commonfiles/help
 **/commonfiles/images
 **/commonfiles/installer
 **/commonfiles/IronPython
+**/commonfiles/language/de
+**/commonfiles/language/en-us/CAD
 **/commonfiles/language/en-us/launcher
 **/commonfiles/language/fr
 **/commonfiles/language/ko
@@ -289,13 +289,16 @@
 **/commonfiles/launcher
 **/commonfiles/launcherQt
 **/commonfiles/MainWin
+**/commonfiles/MPI
 **/commonfiles/registry
 **/commonfiles/Stride
 **/commonfiles/SystemCoupling
 **/commonfiles/Textures
 **/commonfiles/tools
 **/commonfiles/UnitsLibrary
+**/commonfiles/WBAddinConfiguration
 **/dcs
+**/dpf
 **/Electronics
 **/Framework
 **/Images
@@ -306,6 +309,9 @@
 **/licensingclient/linx64/libFlxComm64.so.2020.12
 **/licensingclient/linx64/libFlxCore64.so.2020.12
 **/licensingclient/linx64/lmutil
+**/licensingclient/linx64/LicensingSettingsUtility
+**/licensingclient/linx64/LicensingSettings
+**/meshing/Prime
 **/ProductConfig.sh
 **/RSM
 **/SEC
@@ -322,76 +328,84 @@
 **/tp/CUEUnits
 **/tp/d3
 **/tp/ffmpeg
-**/tp/hdf5/1_10_5/linx64/bin
-**/tp/hdf5/1_10_5/linx64/include
-**/tp/hdf5/1_10_5/linx64/lib/libhdf5.a
-**/tp/hdf5/1_10_5/linx64/lib/libhdf5.settings
-**/tp/hdf5/1_10_5/linx64/lib/libhdf5_cpp.a
-**/tp/hdf5/1_10_5/linx64/lib/libhdf5_hl.a
-**/tp/hdf5/1_10_5/linx64/lib/libhdf5_hl_cpp.a
-**/tp/hdf5/1_10_5/linx64/lib/libhdf5_tools.a
-**/tp/hdf5/1_10_5/linx64/lib/libhdf5_tools.so
-**/tp/hdf5/1_10_5/linx64/lib/libhdf5_tools.so.100
-**/tp/hdf5/1_10_5/linx64/lib/libhdf5_tools.so.100.1.2
-**/tp/hdf5/1_10_5/linx64/lib/pkgconfig
-**/tp/hdf5/1_10_5/linx64/share
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_avx.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_avx2.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blacs_intelmpi_ilp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blacs_intelmpi_ilp64.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blacs_intelmpi_lp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blacs_openmpi_ilp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blacs_openmpi_ilp64.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blacs_openmpi_lp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blacs_sgimpt_ilp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blacs_sgimpt_ilp64.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blacs_sgimpt_lp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blacs_sgimpt_lp64.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blas95_ilp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_blas95_lp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_cdft_core.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_cdft_core.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_core.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_gf_ilp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_gf_ilp64.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_gf_lp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_gf_lp64.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_gnu_thread.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_intel_ilp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_intel_ilp64.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_intel_lp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_intel_thread.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_lapack95_ilp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_lapack95_lp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_mc.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_mc3.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_pgi_thread.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_pgi_thread.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_rt.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_scalapack_ilp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_scalapack_ilp64.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_scalapack_lp64.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_sequential.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_sequential.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_tbb_thread.a
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_tbb_thread.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_vml_avx.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_vml_avx2.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_vml_cmpt.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_vml_def.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_vml_mc.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_vml_mc2.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/libmkl_vml_mc3.so
-**/tp/IntelMKL/2020.0.166/linx64/lib/intel64/locale
+**/tp/hdf5/1_12_2/linx64/bin
+**/tp/hdf5/1_12_2/linx64/include
+**/tp/hdf5/1_12_2/linx64/lib/libhdf5-serial.a
+**/tp/hdf5/1_12_2/linx64/lib/libhdf5.settings
+**/tp/hdf5/1_12_2/linx64/lib/libhdf5_cpp-serial.a
+**/tp/hdf5/1_12_2/linx64/lib/libhdf5_hl-serial.a
+**/tp/hdf5/1_12_2/linx64/lib/libhdf5_hl_cpp-serial.a
+**/tp/hdf5/1_12_2/linx64/lib/libhdf5_tools-serial.a
+**/tp/hdf5/1_12_2/linx64/lib/libhdf5_tools-serial.so
+**/tp/hdf5/1_12_2/linx64/lib/libhdf5_tools-serial.so.200
+**/tp/hdf5/1_12_2/linx64/lib/libhdf5_tools-serial.so.200.1.1
+**/tp/hdf5/1_12_2/linx64/lib/pkgconfig
+**/tp/hdf5/1_12_2/linx64/share
+**/tp/IntelMKL/2020.0.166
 **/tp/IntelMKL/2021.3.0
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_avx.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_avx2.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_avx512.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_blacs_intelmpi_ilp64.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_blacs_intelmpi_ilp64.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_blacs_openmpi_ilp64.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_blacs_openmpi_ilp64.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_cdft_core.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_cdft_core.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_gf_ilp64.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_gf_ilp64.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_gf_lp64.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_gf_lp64.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_intel_ilp64.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_intel_ilp64.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_mc.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_mc3.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_pgi_thread.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_pgi_thread.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_rt.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_rt.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_scalapack_ilp64.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_scalapack_ilp64.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_sequential.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_sequential.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_sycl.so*
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_tbb_thread.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_tbb_thread.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_vml_avx.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_vml_avx2.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_vml_cmpt.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_vml_def.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_vml_mc.so.2
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/libmkl_vml_mc3.so
+**/tp/IntelMKL/2023.1.0/linx64/lib/intel64/locale
 **/tp/jquery
+**/tp/MPI/Intel/2018.3.222
+**/tp/MPI/Intel/2019.12.320
+**/tp/MPI/Intel/2021.5.0
+**/tp/MPI/Intel/2021.6.0
+**/tp/MPI/Intel/2021.8.0
+**/tp/MPI/Intel/2021.10.0
+**/tp/MPI/Intel/2021.11.0/linx64/lib/debug
+**/tp/MPI/Intel/2021.11.0/linx64/lib/mpi/debug
+**/tp/MPI/Intel/2021.11.0/linx64/lib/release/libmpi.a
+**/tp/MPI/Intel/2021.11.0/linx64/lib/release/libmpi.dbg
+**/tp/MPI/OpenMPI/5.0.0
 **/tp/ngInfiniteScroll
+**/tp/nss
 **/tp/nvd3
 **/tp/openjre
 **/tp/qt
 **/tp/qt*
 **/tp/signalr
 **/tp/zlib
+*_Certified_artifactory/
+*_Certified_artifactory/**/*
+*_docker
+*_docker/**/*
+workdir
+.workdir
+*swp
+*swo
 
 # working directories
 .dockerignore
