--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ basepython =
     py310: python3.10
     py311: python3.11
     py312: python3.12
+    py313: python3.13
     py: python3
     {style,reformat,doc}: python3
 setenv =
