--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ doc = [
     "jupyter_sphinx==0.5.3",
     "jupyter==1.1.1",
     "jupyterlab>=3.2.8",
+    "linuxdoc==20240924",
     "matplotlib==3.9.2",
     "nbformat==5.10.4",
     "numpydoc==1.8.0",
